<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relative_layout_for_vip"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.solo.ver02.VIP_Fragment"
    android:background="#fafafa">

    <!-- TODO: Update blank fragment layout -->

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="#ebf2f5"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="30dp"
            android:max="2"
            android:progress="1"
            android:progressDrawable="@drawable/progress"
            android:thumb="@drawable/thumb" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/two_month"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="16sp"
            android:layout_above="@+id/textView10"
            android:layout_alignRight="@+id/seekBar"
            android:layout_alignEnd="@+id/seekBar" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/seekBar"
            android:layout_alignStart="@+id/seekBar"
            android:layout_centerVertical="true"
            android:paddingTop="10dp"
            android:text="@string/one_week"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView8"
            android:layout_alignBottom="@+id/textView8"
            android:layout_centerHorizontal="true"
            android:text="@string/one_month"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:text="@string/price_for_week"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textSize="16sp"
            android:layout_marginLeft="25dp"
            android:layout_marginStart="25dp"
            android:layout_below="@+id/textView8"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView4"
            android:layout_centerHorizontal="true"
            android:text="@string/price_for_month"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="2dp"
            android:text="@string/price_for_two_month"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textSize="16sp"
            android:layout_below="@+id/textView3"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="27dp"
            android:layout_marginEnd="27dp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical"
        tools:context=".MainActivity"
        android:layout_below="@+id/relativeLayout">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/vip_1_string"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="17dp"
            android:text="@string/vip_2_string"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/vip_3_string"
            android:textSize="16sp"
            />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:text="@string/vip_4_string"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:text="@string/vip_5_string"
            android:textSize="16sp" />

        <Button
            android:id="@+id/button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape"
            android:text="@string/vipbutton"
            android:theme="@style/Base.ThemeOverlay.AppCompat" />


    </LinearLayout>

</RelativeLayout>
