<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:orientation="vertical"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">
<!--
    <ImageView



        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/textView"
        android:layout_marginLeft="15dp"
        android:adjustViewBounds="false"
        android:cropToPadding="false"
        android:gravity="top"
        app:srcCompat="@android:drawable/sym_def_app_icon" />-->

    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/profile_image"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/textView"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:adjustViewBounds="false"
        android:cropToPadding="false"
        android:gravity="top"
        android:src="@drawable/prof" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_alignParentTop="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="25dp"
        android:layout_toEndOf="@+id/profile_image"
        android:layout_toRightOf="@+id/profile_image"
        android:gravity="top"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/profile_name"
        android:textAppearance="@style/Base.TextAppearance.AppCompat"
        android:textSize="17sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:adjustViewBounds="true"
        android:divider="@drawable/separator"
        android:orientation="horizontal"
        android:showDividers="middle"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.55"
            android:background="#3f98b5">

            <Switch
                android:id="@+id/switch6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="7dp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="53dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal|bottom"
                android:gravity="center_horizontal"
                android:text="@string/vip_status"
                android:textColor="#ffffff"
                android:textSize="12sp" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.55"
            android:background="#3f98b5">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="33dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:paddingTop="7dp"
                app:srcCompat="@drawable/get_top" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="81dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal|bottom"
                android:gravity="center_horizontal"
                android:text="@string/Zateryalis_v_tolpe"
                android:textColor="#ffffff"
                android:textSize="12sp" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.55"
            android:background="#3f98b5"
            android:checkableBehavior="single">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="47dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal|bottom"
                android:gravity="center_horizontal"
                android:text="@string/Schet"
                android:textColor="#ffffff"
                android:textSize="12sp" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="30dp"
                android:layout_height="36dp"
                android:layout_gravity="center_horizontal"
                android:paddingTop="7dp"
                app:srcCompat="@drawable/score" />
        </FrameLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/textView"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        app:srcCompat="@drawable/settings" />

</RelativeLayout>
